Ho completato il gioco.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
   <body>
 
     <div>
-      <p id="lista"></p>
+      <h1 id="bombe"></h1>
+    </div>
+
+    <div>
+      <h1 id="numeriScelti"></h1>
     </div>
 
     <script type="text/javascript" src="js/function.js"></script>
